tests/envoy-config-test.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: external-envoy-config
  namespace: cms
data:
  envoy.yaml: |
    # External Envoy configuration for CI testing
    admin:
      access_log:
        - name: envoy.access_loggers.file
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
            path: /tmp/admin_access.log
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901

    static_resources:
      listeners:
        - name: listener_grpc
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8001
          
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    generate_request_id: true
                    stat_prefix: ingress_grpc
                    codec_type: AUTO
                    route_config:
                      name: local_route_grpc
                      virtual_hosts:
                        - name: backend_grpc
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: inference_server_grpc_service
                                timeout: 0s
                    
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    http2_protocol_options: {}

      clusters:
        - name: inference_server_grpc_service
          connect_timeout: 0.25s
          type: STRICT_DNS
          # Absolute FQDN (trailing dot) + V4_ONLY: matches the chart template so c-ares
          # never walks the pod's search domains.
          dns_lookup_family: V4_ONLY
          lb_policy: LEAST_REQUEST
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: inference_server_grpc_service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: supersonic-inference-server.cms.svc.cluster.local.
                          port_value: 8001
