tests/values-external-envoy-config.yaml
# Test values for external Envoy configuration testing

triton:
  replicas: 1
  image: fastml/triton-torchgeo:26.04-py3-geometric # works for CMSSW run3
  command: ["/bin/sh", "-c"]
  args: 
    - |
      /opt/tritonserver/bin/tritonserver \
      --model-repository=/cvmfs/cms.cern.ch/el9_amd64_gcc12/cms/cmssw/CMSSW_14_1_0_pre7/external/el9_amd64_gcc12/data/RecoBTag/Combined/data/models/ \
      --log-verbose=0 \
      --disable-auto-complete-config \
      --exit-timeout-secs=60
  resources:
    limits: { cpu: 1, memory: 3Gi}
    requests: { cpu: 1, memory: 1Gi}
  modelRepository:
    enabled: true
    storageType: cvmfs-pvc
    mountPath: /cvmfs
  readinessProbe:
    reset: true

envoy:
  enabled: true
  external_config:
    load_from_configmap: true
    configmap_name: external-envoy-config
    configmap_key: envoy.yaml

prometheus:
  enabled: false

grafana:
  enabled: false

keda:
  enabled: false

metricsCollector:
  enabled: false
